--- a/exo-storage-api-core/pom.xml
+++ b/exo-storage-api-core/pom.xml
@@ -24,7 +24,7 @@
     <parent>
         <artifactId>storage-api</artifactId>
         <groupId>org.exoplatform.addons.storage</groupId>
-        <version>0.1.0-SNAPSHOT</version>
+        <version>0.1.0</version>
     </parent>
     <artifactId>exo-storage-api-core</artifactId>
     <packaging>jar</packaging>
