--- a/exo-storage-api-core/pom.xml
+++ b/exo-storage-api-core/pom.xml
@@ -63,6 +63,10 @@
             <artifactId>commons-lang3</artifactId>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+        </dependency>
         <!-- FIN -->
         <!-- Test framework-->
         <dependency>
