--- a/pom.xml
+++ b/pom.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
     <modelVersion>4.0.0</modelVersion>
     <parent>
@@ -11,7 +10,7 @@
     </parent>
     <groupId>org.exoplatform.addons.storage</groupId>
     <artifactId>storage-api</artifactId>
-    <version>0.1.1-SNAPSHOT</version>
+    <version>0.1.1</version>
     <packaging>pom</packaging>
     <name>Storage API</name>
     <description>Storage API Capabilities</description>
@@ -35,7 +34,8 @@
         <connection>scm:git:git://github.com/kmenzli/storage-api.git</connection>
         <developerConnection>scm:git:git@github.com:kmenzli/storage-api.git</developerConnection>
         <url>https://github.com/kmenzli/exo-persistence-api</url>
-    </scm>
+      <tag>0.1.1</tag>
+  </scm>
     <properties>
         <!-- 3rd party libraries versions -->
         <commons-lang3.version>3.1</commons-lang3.version>
